changing path directories

--- a/Infrared_cameras/postproc/postproc.ipynb
+++ b/Infrared_cameras/postproc/postproc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "009ecc62",
    "metadata": {},
    "outputs": [],
@@ -13,38 +13,68 @@
     "from scipy.interpolate import interp1d\n",
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "id": "0370bbc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current working directory: /Users/maibrittberghofer/Desktop/Arbeit /Meteor/python_scripts_2025_meteor/Infrared_cameras/postproc\n",
+      "Data directory: /Users/maibrittberghofer/Desktop/Arbeit /Meteor/python_scripts_2025_meteor/Infrared_cameras/data\n",
+      "Water file: /Users/maibrittberghofer/Desktop/Arbeit /Meteor/python_scripts_2025_meteor/Infrared_cameras/data/20250629_A2_17_IR_Water.csv\n",
+      "Sky file: /Users/maibrittberghofer/Desktop/Arbeit /Meteor/python_scripts_2025_meteor/Infrared_cameras/data/20250629_A2_17_IR_Sky.csv\n",
+      "Raw SST output file: /Users/maibrittberghofer/Desktop/Arbeit /Meteor/python_scripts_2025_meteor/Infrared_cameras/postproc/raw/20250629_A2_17_IR_SST.csv\n",
+      "Averaged SST output file: /Users/maibrittberghofer/Desktop/Arbeit /Meteor/python_scripts_2025_meteor/Infrared_cameras/postproc/1min/20250629_A2_17_IR_SST_1min.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# === SETTINGS ===\n",
     "date_str = \"20250629\" # Date in YYYYMMDD format\n",
     "ID = \"A2\"             # Station ID\n",
     "action_number = \"17\"  # 17 for Halobates\n",
     "\n",
+    "from pathlib import Path\n",
+    "\n",
     "# === File Paths ===\n",
-    "data_dir = Path(\"/Users/maibrittberghofer/Desktop/Arbeit /Meteor/python_scripts_2025_meteor/data\")\n",
+    "\n",
+    "dir_path = Path.cwd()  # current working directory\n",
+    "print(\"Current working directory:\", dir_path)\n",
+    "\n",
+    "# Data directory (assuming it's a sibling folder)\n",
+    "data_dir = dir_path.parent / \"data\"\n",
+    "\n",
+    "# Output path for the raw SST temperature\n",
+    "out_dir = dir_path / \"raw\"\n",
+    "sst_output_file = out_dir / f\"{date_str}_{ID}_{action_number}_IR_SST.csv\"\n",
+    "\n",
+    "# Water and sky input files\n",
     "water_file = data_dir / f\"{date_str}_{ID}_{action_number}_IR_Water.csv\"\n",
     "sky_file = data_dir / f\"{date_str}_{ID}_{action_number}_IR_Sky.csv\"\n",
     "\n",
-    "# Output path for the raw SST temperature\n",
-    "out_dir = Path(\"/Users/maibrittberghofer/Desktop/Arbeit /Meteor/python_scripts_2025_meteor/postproc/raw\")\n",
-    "sst_output_file = out_dir / f\"{date_str}_{ID}_{action_number}_IR_SST.csv\"\n",
-    "\n",
     "# Output path for the averaged SST temperature\n",
-    "out_dir_avg = Path(\"/Users/maibrittberghofer/Desktop/Arbeit /Meteor/python_scripts_2025_meteor/postproc/1min\")\n",
-    "sst_avg_file = out_dir_avg / f\"{date_str}_{ID}_{action_number}_IR_SST_1min.csv\""
+    "out_dir_avg = dir_path / \"1min\"\n",
+    "sst_avg_file = out_dir_avg / f\"{date_str}_{ID}_{action_number}_IR_SST_1min.csv\"\n",
+    "\n",
+    "# === Debug output (optional) ===\n",
+    "print(\"Data directory:\", data_dir)\n",
+    "print(\"Water file:\", water_file)\n",
+    "print(\"Sky file:\", sky_file)\n",
+    "print(\"Raw SST output file:\", sst_output_file)\n",
+    "print(\"Averaged SST output file:\", sst_avg_file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "id": "a7a41c0e",
    "metadata": {},
    "outputs": [],
@@ -70,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "474672d8",
    "metadata": {},
    "outputs": [],
@@ -90,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "b0326f31",
    "metadata": {},
    "outputs": [],
@@ -113,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "55b690f8",
    "metadata": {},
    "outputs": [],
@@ -129,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "c3a1b7fc",
    "metadata": {},
    "outputs": [],
@@ -158,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "575f4bcf",
    "metadata": {},
    "outputs": [
@@ -186,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "id": "64af8976",
    "metadata": {},
    "outputs": [
@@ -229,9 +259,7 @@
   {
    "cell_type": "markdown",
    "id": "567d082a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Look for data gaps or duplicates \n",
     "These cells have to be run only if the datasets are not perfecly aligned.\n",
@@ -241,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "id": "711fbcc8",
    "metadata": {},
    "outputs": [
@@ -281,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "id": "29726aaa",
    "metadata": {},
    "outputs": [
@@ -325,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "48d3d494",
    "metadata": {},
    "outputs": [
@@ -355,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 46,
    "id": "8d0ccad4",
    "metadata": {},
    "outputs": [
@@ -403,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 47,
    "id": "e3f5a5e8",
    "metadata": {},
    "outputs": [
@@ -441,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "id": "d926c002",
    "metadata": {},
    "outputs": [],
@@ -453,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "id": "cd498107",
    "metadata": {},
    "outputs": [],
@@ -479,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "id": "306f5fb4",
    "metadata": {},
    "outputs": [],
@@ -490,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "id": "45af05d7",
    "metadata": {},
    "outputs": [
@@ -534,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "id": "9409050c",
    "metadata": {},
    "outputs": [],
@@ -552,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "id": "a61de1cc",
    "metadata": {},
    "outputs": [
@@ -597,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "id": "bc051a21",
    "metadata": {},
    "outputs": [],
@@ -609,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "id": "1e4576a9",
    "metadata": {},
    "outputs": [],
@@ -622,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "id": "d77e0eef",
    "metadata": {},
    "outputs": [
@@ -666,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "id": "509a13bb",
    "metadata": {},
    "outputs": [],
@@ -681,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "id": "c5af0ecc",
    "metadata": {},
    "outputs": [],
@@ -713,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "id": "967bd707",
    "metadata": {},
    "outputs": [
